main - add validationErrorDto
